# rust-local-storage-cdn

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.redis.yml  docker-compose.standalone.yml  docker-compose.yml
local-storage/: Cargo.toml  Dockerfile  README.md  envs.json  init_db.sql
local-storage/.sqlx/: query-2b3f5c171f4f2e5a3864fda292d07ec6388397be2d1ded850257b4033de3522e.json  query-2d9722904a1dda9266c7a31bf12c68d25d58748b8dd9535bbab05413d86a1b83.json  query-3f6987161705de88937dd25a8213c8fc94e76a1d6b647f603dc1673bd5274e70.json  query-422f93a113217d132d637ed8941260060b71f65f2de3b277d6c913f36ab24bf8.json  query-444ab96b45cce9e477c7c3ecfb6e45da611e1bd531b560f6ee0fb86d88e996d2.json  query-4f77a8cd6c863d4d5a61fdc9825cad390b0a30e6c58ec35f6001da9386fa701f.json  query-513b67cbcc75d67c9e3c5d00398af9bbbaf11fdacc265c88c82ea5277b318f30.json  query-5714624dfceef85997582666ea2587347346dcfbe6a9451961369bfe434e25f0.json  query-581f521f4a36400f26878057a1e977ebfc30632716f4be32de397dc432b56afc.json  query-5ad67801035de1d043bf76e755186d488bcaf7d3ace1f9f4f89613c0927b2eee.json  query-5b2082b4c88782624bb0adbc93164712acb44ffe8ac5217d26b87364e2c2dec2.json  query-7146f9adcdb3864e4f4f2c8d2ad129ebec7f1e37ff4ff031edba671b498bc952.json  query-7d893193c570d014b177fe8b11df471fb98a3d947f6300e80c938dc3de5fdbf6.json  query-838cdc409b7f74cad1dc9225493b9e9b4560b2a7318b3ad7e5a3a64362c1aa5b.json  query-88a7eb0c563966c550f99286bb2f196ef7d8c09c048d75e04814be550a7f598f.json  query-8bb8ad22e5c629c15481959121c555f6973eed53880d7be47a0a31a330aa8079.json  query-91807deb77425826e48cdfaf746b4610f1bde50a44d06c7d016b80235a4b3936.json  query-950a7b301fdebee7d3f6506bfff7da2625039c455dd17b31e12a82497179707c.json  query-95181ed1e2a28fb559999d4f1d313fd02b3a9ef1596c340af731d8d1b13c6062.json  query-9b9ff67b3a83fc68cebeb096234af16e590db45383e148668f1df2cee0421fd3.json  query-9f9ff8795f3bb820c5c21d1ef0b24120b80d3861515c74d7d65016b7824625ec.json  query-a2736be37cb4022cfc5fe3eb788b9cc9cde9e4008f7fc7298792d6a6e8b5f322.json  query-a2a979fd954406981a84a707a0117c188e33345d58c9b8e081362ed3d865b671.json  query-a5c48df9471557daa1d94b8bab30edb371406882ad1f56d91be2bc8c0841a803.json  (+12 more)
(+64 files in other folders)
